Remove global where_C module
It is only used in RCI and it only contains one variable. It was also
referenced in rmcdhf90, but the variable was not actually being used.
So, instead of having it on libmod, let's have it locally in rci90 /
rci90_mpi instead.

--- a/src/appl/rci90/CMakeLists.txt
+++ b/src/appl/rci90/CMakeLists.txt
@@ -136,6 +136,9 @@ add_executable(rci
     wghtd5_I.f90
     zkf.f90
     zkf_I.f90
+
+    # Additional modules for global state
+    where_C.f90
 )
 target_link_libraries_Fortran(rci PUBLIC mod 9290 rang90 dvd90)
 install(TARGETS rci DESTINATION bin/)
