--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-# The default binary installation directory
+# The default binary installation directories
 bin/
+lib/
 
 # CMake out-of-tree build directories
 build/
