--- a/.github/workflows/triggerbuilds.yml
+++ b/.github/workflows/triggerbuilds.yml
@@ -13,7 +13,7 @@ jobs:
       run: curl \
              -X GET \
              -H"Accept: application/vnd.github.v3+json" \
-             -H"authorization: Bearer ${GITHUB_TOKEN}" \
+             -H"authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
              "https://api.github.com/repos/mortenpi/grasp"
 
     - name: Run a multi-line script
