--- a/.github/workflows/triggerbuilds.yml
+++ b/.github/workflows/triggerbuilds.yml
@@ -10,9 +10,6 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Run a one-line script
-      run: bash run.sh
-
-    - name: Run a multi-line script
       run: |
-        echo Add other actions to build,
-        echo test, and deploy your project.
+        pwd
+        bash .github/workflows/run.sh
