--- a/.github/workflows/triggerbuilds.yml
+++ b/.github/workflows/triggerbuilds.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Trigger gh-pages?
 
 on: [push]
 
@@ -10,6 +10,8 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Run a one-line script
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         pwd
         bash .github/workflows/run.sh
