--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ jobs:
 
     - stage: documentation
       before_install:
-        - sudo add-apt-repository -y ppa:mikepurvis/docs # newer Doxygen
+        #- sudo add-apt-repository -y ppa:mikepurvis/docs # newer Doxygen
         - sudo apt-get update
         - sudo apt-get install -y doxygen graphviz
       script:
