Build a shared library of libgrasp

--- a/src/libgrasp/CMakeLists.txt
+++ b/src/libgrasp/CMakeLists.txt
@@ -1,5 +1,12 @@
-add_library(grasp STATIC
+add_library(grasp-static STATIC
+    constants.f90
+    datafiles.f90
+)
+setup_fortran_modules(grasp-static)
+
+add_library(grasp SHARED
     constants.f90
     datafiles.f90
 )
 setup_fortran_modules(grasp)
+install(TARGETS grasp DESTINATION lib/)
