--- a/.github/workflows/buildmake.yml
+++ b/.github/workflows/buildmake.yml
@@ -9,9 +9,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-    - name: Run a one-line script
-      run: echo Hello, world!
-    - name: Run a multi-line script
-      run: |
-        echo Add other actions to build,
-        echo test, and deploy your project.
+    - name: "Install dependencies"
+      run: sudo apt-get install -y build-essential gfortran liblapack-dev libblas-dev openmpi-bin openmpi-common
+    - name: Build
+      run: cd src/ && make
+    - name: Verify
+      run: ./contrib/checkbin.sh
