--- a/.github/workflows/buildmake.yml
+++ b/.github/workflows/buildmake.yml
@@ -12,6 +12,8 @@ jobs:
     - name: "Install dependencies"
       run: sudo apt-get install -y build-essential gfortran liblapack-dev libblas-dev openmpi-bin openmpi-common
     - name: Build
-      run: cd src/ && make
+      run: |
+        source make_environment_gfortran
+        cd src/ && make
     - name: Verify
       run: ./contrib/checkbin.sh
