--- a/.github/workflows/buildmake.yml
+++ b/.github/workflows/buildmake.yml
@@ -11,9 +11,9 @@ jobs:
     - uses: actions/checkout@v1
     - name: "Install dependencies"
       run: sudo apt-get install -y build-essential gfortran liblapack-dev libblas-dev openmpi-bin openmpi-common
-    - name: Build
+    - name: Build GRASP
       run: |
         source make_environment_gfortran
         cd src/ && make
-    - name: Verify
+    - name: Verify binaries
       run: ./contrib/checkbin.sh
